--- a/README
+++ b/README
@@ -2,3 +2,5 @@ Hello world!
 
 Pushing up changes:
 git add . && git commit -m 'what you changed' && git push
+
+(although that throws up a warning, letsee...)
