--- a/README
+++ b/README
@@ -9,3 +9,4 @@ Todo:
 Pushing up changes:
 git add . && git commit -m 'what you changed' && git push
 
+Oh, I'm also checking whether commits show up if they were committed one day and pushed another (in Github's user profile).
